--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -1281,12 +1281,9 @@ textarea.new_message_textarea,
 }
 
 .typeahead.dropdown-menu {
-    background: hsl(0deg 0% 100%);
-
     .typeahead-menu {
         list-style: none;
-        margin: 0;
-        background-color: var(--color-background-popover);
+        margin: 4px 0;
     }
 
     .typeahead-header {
@@ -1300,6 +1297,7 @@ textarea.new_message_textarea,
     }
 
     #typeahead-header-text {
+        color: var(--color-dropdown-item);
         font-size: 12px;
     }
 }
